# gtkmm-glade-tests

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_view.cpp  main_view.h  scene_view.cpp  scene_view.h
resources/: main_view.glade
